--- a/进度报告.md
+++ b/进度报告.md
@@ -11,9 +11,23 @@
 
 2. 第二阶段（系统设计）
    - [x] 确定感知层需要采集参数<font style="color:red">GPS,湿度，温度，光照，CO2</font>
-   - [ ] 确定传感器，开发板（利用开发板套件）已具备<font style="color :red">开发板采集的数据的数据格式定义设计未完成，等待后续进行嵌入式开发时再进行具体设计</font>
-   - [ ] <font style="color:red">中间件是使用OceanConnect平台（需要花钱），还是自己开发个消息中间件SpringRabit，To Do</font>
+   - [x] 确定传感器，开发板（利用开发板套件）已具备<font style="color :red">开发板采集的数据的数据格式定义设计未完成，等待后续进行嵌入式开发时再进行具体设计</font>
+   - [x] <font style="color:red">中间件是使用OceanConnect平台（需要花钱），还是自己开发个消息中间件SpringRabit，To Do</font>
    - [x] web端选用框架<font style="color:red">springboot+springdatajpa+freemaker+Mysql</font>
 3. 第三阶段（web开发）
-   - [ ] 系统功能模块设计
+   - [x] 系统功能模块设计
+   - [ ] 就差个首页（显示当前传感器上传数据，指标参数下发）
 
+### 第二周
+
+计划完成：设计文档撰写，web首页设计，传感器参数可采集）
+
+1.第一阶段（主要设计文档撰写完成）
+
+- [x] 设计文档撰写(设计需求分析，特色创新，功能设计<font style="color:red">差web端界面</font>，系统实现（<font style="color:red">差软件开发框架图</font>）
+- [ ] 下节课任务：web监控首页设计
+
+### 第四周
+
+- [ ] web监控首页设计，模拟一些传感器数据
+- [ ] 传感器光照，温度湿度，<font color="red">土壤湿度,电机还没实现采集控制</font>
