--- a/进度报告.md
+++ b/进度报告.md
@@ -29,5 +29,17 @@
 
 ### 第四周
 
-- [ ] web监控首页设计，模拟一些传感器数据
-- [ ] 传感器光照，温度湿度，<font color="red">土壤湿度,电机还没实现采集控制</font>
+- [x] web监控首页设计，模拟一些传感器数据
+- [x] 传感器光照，温度湿度，<font color="red">土壤湿度,电机还没实现采集控制</font>
+
+### 第五周
+
+- [x] <font color="red">等待NBIOT上传数据</font>
+
+- [x] NBIOT开发板实现传感器数据采集包括光照，温度，湿度，土壤湿度
+
+  
+
+  
+
+  
